fix dropdown: correctly align items in list

--- a/modules/dropdown/scss/_dropdown.scss
+++ b/modules/dropdown/scss/_dropdown.scss
@@ -99,6 +99,7 @@
         @include font-size(24px);
         line-height: 24px;
         color: $black-2;
+        text-align: center;
     }
 
     &:not(.dropdown-link--is-header) {
